force-app/main/default/objects/options__c/options__c.object-meta.xml
<CustomObject>
    <label>Options</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>