force-app/main/default/objects/options__c/fields/Days_Nights__c.field-meta.xml
<CustomField>
    <fullName>Days_Nights__c</fullName>
    <label>Days/Nights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Nights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>