force-app/main/default/objects/options__c/fields/Display_only_Price__c.field-meta.xml
<CustomField>
    <fullName>Display_only_Price__c</fullName>
    <label>Display only Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>