force-app/main/default/objects/options__c/fields/Flights_Max_Nett__c.field-meta.xml
<CustomField>
    <fullName>Flights_Max_Nett__c</fullName>
    <label>Flights Max Nett</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>