force-app/main/default/objects/options__c/fields/flights_max_nett_nz__c.field-meta.xml
<CustomField>
    <fullName>flights_max_nett_nz__c</fullName>
    <label>Flights Max Nett - NZD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>