force-app/main/default/objects/options__c/fields/herokuid__c.field-meta.xml
<CustomField>
    <fullName>herokuid__c</fullName>
    <externalId>true</externalId>
    <label>herokuid</label>
    <length>10</length>
    <type>Text</type>
</CustomField>