force-app/main/default/objects/options__c/fields/Hotel_Code__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Code__c</fullName>
    <formula>if( Deal__r.RecordType.Name = &apos;Hotel&apos;,  Deal__r.Hotel_Code__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Code</label>
    <type>Text</type>
</CustomField>