force-app/main/default/objects/options__c/fields/link_to_master_calendar__c.field-meta.xml
<CustomField>
    <fullName>link_to_master_calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>link_to_master_calendar</label>
    <type>Checkbox</type>
</CustomField>