force-app/main/default/objects/options__c/fields/NIghts__c.field-meta.xml
<CustomField>
    <fullName>NIghts__c</fullName>
    <label>NIghts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>