force-app/main/default/objects/options__c/fields/Opt_related_component_cost__c.field-meta.xml
<CustomField>
    <fullName>Opt_related_component_cost__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>Opt related component cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>