force-app/main/default/objects/options__c/fields/prex_crossover_day__c.field-meta.xml
<CustomField>
    <fullName>prex_crossover_day__c</fullName>
    <inlineHelpText>Day of main itinerary that the last day of the pre tour extension matches with.</inlineHelpText>
    <label>PreX Crossover Day</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>itinerary_context__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>