force-app/main/default/objects/options__c/fields/price_nz__c.field-meta.xml
<CustomField>
    <fullName>price_nz__c</fullName>
    <label>Price - NZD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>