force-app/main/default/objects/options__c/fields/QTY_Sold__c.field-meta.xml
<CustomField>
    <fullName>QTY_Sold__c</fullName>
    <label>QTY Sold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>