force-app/main/default/objects/options__c/fields/Save__c.field-meta.xml
<CustomField>
    <fullName>Save__c</fullName>
    <label>Save</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>