force-app/main/default/objects/options__c/fields/solo_surcharge_nz__c.field-meta.xml
<CustomField>
    <fullName>solo_surcharge_nz__c</fullName>
    <label>solo surcharge - NZD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>