force-app/main/default/objects/options__c/fields/sub_title__c.field-meta.xml
<CustomField>
    <fullName>sub_title__c</fullName>
    <label>sub title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>