force-app/main/default/objects/options__c/fields/Tour_End_Day__c.field-meta.xml
<CustomField>
    <fullName>Tour_End_Day__c</fullName>
    <label>Tour End Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>