force-app/main/default/objects/options__c/recordTypes/Option.recordType-meta.xml
<RecordType>
    <fullName>Option</fullName>
    <active>true</active>
    <description>This is a record type for creating a normal Option Record.</description>
    <label>Option</label>
</RecordType>