force-app/main/default/objects/options__c/recordTypes/Room_Type.recordType-meta.xml
<RecordType>
    <fullName>Room_Type</fullName>
    <active>true</active>
    <description>This is a new Record Type created for Siteminder Integration. (This shall act as the second primary object i.e. Room Type))</description>
    <label>Room Type</label>
</RecordType>