force-app/main/default/objects/options__c/validationRules/Pre_Extension_and_Crossover_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Extension_and_Crossover_Day</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(itinerary_context__c) = &quot;Pre Extension&quot;,
ISBLANK( TEXT(prex_crossover_day__c) )
)</errorConditionFormula>
    <errorMessage>Itinerary Context is Pre Extension and PreX Crossover Day is not populated!</errorMessage>
</ValidationRule>